# ml-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
src/: config.py  operations.py  pipeline.py
tests/: test_config.py  test_integration.yaml  test_operations.py  test_pipeline.py
